@@ -1,7 +1,18 @@
 package com.safefoodtruck.sft.store.service;
 
+import static com.safefoodtruck.sft.common.ValidationMessage.*;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.safefoodtruck.sft.common.util.MemberInfo;
 import com.safefoodtruck.sft.member.domain.Member;
+import com.safefoodtruck.sft.member.exception.NotFoundMemberException;
 import com.safefoodtruck.sft.member.repository.MemberRepository;
 import com.safefoodtruck.sft.menu.domain.Menu;
 import com.safefoodtruck.sft.menu.dto.response.MenuListResponseDto;
@@ -17,20 +28,14 @@ import com.safefoodtruck.sft.store.dto.request.StoreUpdateRequestDto;
 import com.safefoodtruck.sft.store.dto.response.StoreFindResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreInfoListResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreInfoResponseDto;
-import com.safefoodtruck.sft.store.dto.response.StoreLocationResponseDto;
 import com.safefoodtruck.sft.store.dto.response.StoreNoticeResponseDto;
 import com.safefoodtruck.sft.store.exception.NullListException;
 import com.safefoodtruck.sft.store.exception.StoreNotFoundException;
 import com.safefoodtruck.sft.store.repository.StoreImageRepository;
 import com.safefoodtruck.sft.store.repository.StoreRepository;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
 @Service
@@ -47,7 +52,8 @@ public class StoreServiceImpl implements StoreService {
 	@Override
 	public void registStore(StoreRegistRequestDto storeRegistRequestDto) {
 		String email = MemberInfo.getEmail();
-		Member owner = memberRepository.findByEmail(email);
+		Member owner = memberRepository.findByEmail(email)
+			.orElseThrow(NotFoundMemberException::new);
 		Store store = Store.of(owner, storeRegistRequestDto);
 
 		store.setOwner(owner);
@@ -120,11 +126,11 @@ public class StoreServiceImpl implements StoreService {
 	}
 
 	@Override
-	public boolean updateStoreStatus() {
+	public void updateStoreStatus() {
 		Store store = findLoginStore();
 		store.toggleOpenStatus();
-		if (store.getIsOpen()) notificationService.favoriteSendNotify(store.getId(), store.getName());
-		return store.getIsOpen();
+		if (store.getIsOpen().equals(Boolean.TRUE))
+			notificationService.favoriteSendNotify(store.getId(), store.getName());
 	}
 
 	@Override
@@ -139,15 +145,14 @@ public class StoreServiceImpl implements StoreService {
 
 		List<Object[]> averageStarsData = reviewRepository.findAverageStarsForAllStores();
 		Map<Integer, Double> averageStarsMap = averageStarsData.stream()
-			.collect(Collectors.toMap(data -> (Integer) data[0], data -> (Double) data[1]));
+			.collect(Collectors.toMap(data -> (Integer)data[0], data -> (Double)data[1]));
 
 		List<StoreInfoResponseDto> storeInfoResponseDtos = openStores.stream()
 			.map(openStore -> {
 				Double averageStar = averageStarsMap.getOrDefault(openStore.getId(), 0.0);
 				return StoreInfoResponseDto.fromEntity(openStore, averageStar.intValue());
 			})
-			.collect(Collectors.toList());
-		log.info("store count : {}", storeInfoResponseDtos.size());
+			.toList();
 
 		return StoreInfoListResponseDto.builder()
 			.count(storeInfoResponseDtos.size())
@@ -156,13 +161,11 @@ public class StoreServiceImpl implements StoreService {
 	}
 
 	@Override
-	public StoreLocationResponseDto updateStoreLocation(
+	public void updateStoreLocation(
 		StoreLocationRequestDto storeLocationRequestDto) {
 		Store store = findLoginStore();
 		store.updateStoreLocation(storeLocationRequestDto);
 		storeRepository.save(store);
-
-		return StoreLocationResponseDto.fromEntity(store);
 	}
 
 	@Override
@@ -183,12 +186,17 @@ public class StoreServiceImpl implements StoreService {
 	}
 
 	@Override
-	public StoreNoticeResponseDto deleteStoreNotice() {
+	public void deleteStoreNotice() {
 		Store store = findLoginStore();
 		store.deleteNotice();
 		storeRepository.save(store);
+	}
 
-		return StoreNoticeResponseDto.fromEntity(store);
+	@Override
+	public String checkDuplicateSafetyLicenseNumber(final String safetyLicenseNumber) {
+		boolean exists = storeRepository.findStoreWithMenusAndImagesBySafetyLicenseNumber(safetyLicenseNumber)
+			.isPresent();
+		return exists ? DUPLICATE.get() : POSSIBLE.get();
 	}
 
 	public Store findLoginStore() {
